[master] criar roterisação da api
